# cava

./: CMakeLists.txt  Makefile.am  README.md  cava.c  cavacore.c  cavacore.h  cavacore_test.c  common.h  config.c  config.h  configure.ac  meson.build
.github/workflows/: build-and-test.yml
cava_win/cava/: cava.rc  cava.vcxproj  cava.vcxproj.filters
include/cava/: cavacore.h  config.h
include/cava/input/: common.h
include/cava/output/: common.h  noritake.h  raw.h
input/: alsa.c  alsa.h  common.c  common.h  fifo.h  jack.c  jack.h  jack.lo  oss.c  oss.h  pipewire.c  pipewire.h  portaudio.c  portaudio.h  pulse.c  pulse.h  shmem.c  shmem.h  sndio.c  sndio.h  winscap.c  winscap.h
output/: common.c  common.h  noritake.h  raw.h  sdl_cava.c  sdl_glsl.c  terminal_bcircle.h  terminal_noncurses.c  terminal_noncurses.h
src/: cava.c  cavacore.c  config.c
src/input/: alsa.c  common.c  pipewire.c  portaudio.c  pulse.c  shmem.c
src/output/: common.c  noritake.c  raw.c  sdl_cava.c  sdl_glsl.c  terminal_ncurses.c  terminal_noncurses.c
